[project]
name = "zoo-animals-service"
version = "0.1.0"
description = ""
authors = [
    {name = "derekgygax",email = "derekgygax@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "idna (>=3.10,<4.0)",
    "mako (>=1.3.9,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "watchfiles (>=1.0.4,<2.0.0)",
    "websockets (>=14.2,<15.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
